Changes - Adding search for books
