# routes/api.php
@@ -53,6 +53,7 @@ Route::group([
 
     //books
     Route::get('/books/', [BooksController::class, 'index']);
+    Route::post('/books/search/', [BooksController::class, 'search']);
     Route::get('/books/{id}/', [BooksController::class, 'watch']);
     Route::post('/books/', [BooksController::class, 'register']);
     Route::put('/books/{id}/', [BooksController::class, 'update']);
